--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello world, soon you will see Wilson predict all kinds of results.
+<head>
+  <meta http-equiv="refresh" content="0; url=https://www.github.com/reynirlengjan">
+</head>
